--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "^1.1.13"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
