--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
+      - run: npm run deploy
 # There currently are no tests!
 #    - run: npm test
