--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://shiraze.github.io/react-tictactoe",
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "react-scripts": "2.1.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.1",
     "typeface-roboto": "^1.1.13"
   },
@@ -30,7 +32,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "redux-devtools": "^3.4.2"
+    "gh-pages": "^4.0.0"
   }
 }
