--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,9 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        # 16.x, 18.x removed due to openssl-legacy-provider issue
-        # react-scripts might need to be updated (as it provides webpack) in order to use newer node versions
-        node-version: [14.x]
+        node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,5 +27,4 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-# There currently are no tests!
-#    - run: npm test
+      - run: npm test
